--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,6 @@
 body {
-     display: flex;
-    flex-direction: column;
-    width: 100vw;
-    align-items: center;
-    font-family: 'Century Gothic', sans-serif;
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
