--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,74 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title><%= title %></title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #cdedfd;
-            background-image: linear-gradient(319deg, #cdedfd 0%, #ffec82 37%, #ffcfd2 100%);
-            display: flex;
-            flex-direction: column;
-            width: 100vw;
-            min-height: 100vh;
-            align-items: center;
-            justify-content: center;
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            font-weight: 100;
-        }
-
-        h1 {
-            font-weight: 800;
-            text-transform: uppercase;
-            letter-spacing: 10px;
-
-        }
-
-        ul {
-            list-style: none;
-            display: flex;
-            padding-left: 0;
-            animation: 0.5s ease-out 0s 1 slideIn;
-            max-width: 400px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        li {
-            background-color: white;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            margin: 10px;
-            transition: 0.2s;
-            padding: 10px;
-        }
-
-        li:hover {
-            outline: 1px solid black;
-            background-color: rgba(255, 255, 255, 0.5);
-
-        }
-
-    </style>
-</head>
-
-<body>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
     <h1><%= title %></h1>
-    <ul>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-        <li>Chocolate</li>
-        <li>Cookies</li>
-    </ul>
-</body>
-
+    <p>Welcome to <%= title %></p>
+  </body>
 </html>
