--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <a href="/math/newlink1">New link 1</a>
+    <a href="/math/calculator"> New Link 1</a>
     <a href="/math/add">add</a>
     <a href="/math/divide">divide</a>
     <a href="/math/multiply">multiply</a>
