--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -10,6 +10,7 @@
     <a href="/math/divide">divide</a>
     <a href="/math/multiply">multiply</a>
     <a href="/math/subtract">subtract</a>
+    <a href="/math/subtract">New Link 2</a>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <form action="<%= title %>" method="get">
