--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
-  color: #00B7FF;
+  color: lightcoral;
+}
+
+.container {
+  display: inline-block;
+  margin-top: 5px;
+}
+
+button {
+  padding: 5px;
+  margin-top: 5px;
+}
+
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+  font-size: 25px;
 }
