--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -11,7 +11,7 @@
       <a href="/math/divide">divide</a>
       <a href="/math/multiply">multiply</a>
       <a href="/math/subtract">subtract</a>
-      <a href="/math/subtract">New Link 2</a>
+      <a href="/views/about.ejs">About us</a>
       <h1><%= title %></h1>
       <p>Welcome to <%= title %></p>
       <form action="<%= title %>" method="get">
