--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,27 +1,97 @@
 body {
   padding: 50px;
-  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 20px "Century Gothic", sans-serif;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 a {
+  width: 25%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: white;
+  outline: 1px solid lightcoral;
   color: lightcoral;
 }
 
 .container {
-  display: inline-block;
-  margin-top: 5px;
+  max-width: 600px;
+  margin: auto;
+  background-color: rgba(0, 255, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+}
+
+form {
+  order: -1;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+input {
+  width: 45%;
+  height: 100px;
+  outline: none;
+  border: none;
+  background-color: rgba(255, 0, 0, 0.1);
+  text-align: center;
+  padding-left: 20px;
+  font-size: 25px;
 }
 
 button {
   padding: 5px;
-  margin-top: 5px;
+  margin-top: 25px;
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 2px;
+  transition: 0.2s;
 }
 
-h1 {
-  text-align: center;
+button:hover {
+  background-color: white;
+  color: black;
+  letter-spacing: 10px;
 }
+
 p {
   text-align: center;
   font-size: 25px;
+}
+
+h1 {
+  order: -2;
+
+  text-decoration: none;
+  width: 100%;
+  height: 100px;
+  text-transform: uppercase;
+  font-size: 30px;
+  letter-spacing: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#symbol {
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
