--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <span className="container">
+    <span class="container">
       <h1><a href="/math/calculator"> Calculator</a></h1>
       <a href="/math/add">+</a>
       <a href="/math/divide">/</a>
