--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -3,23 +3,31 @@
   <head>
     <title>Calculator [<%= title %>]</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <span class="container">
-      <h1><a href="/math/calculator"> Calculator</a></h1>
-      <a href="/math/add">+</a>
-      <a href="/math/divide">/</a>
-      <a href="/math/multiply">*</a>
-      <a href="/math/subtract">-</a>
-      <form action="<%= title %>" method="get">
-        <input type="number" name="num1" />
-        <span id="symbol"><%= symbol %></span>
-        <input type="number" name="num2" />
-        <br />
-        <button type="submit">submit</button>
-      </form>
-      <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
-      num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
-    </span>
+    <div id="cont">
+      <div class="container">
+        <h1><a href="/math/calculator"> Calculator</a></h1>
+        <a href="/math/add">+</a>
+        <a href="/math/divide">/</a>
+        <a href="/math/multiply">*</a>
+        <a href="/math/subtract">-</a>
+        <form action="<%= title %>" method="get">
+          <input type="number" name="num1" />
+          <span id="symbol"><%= symbol %></span>
+          <input type="number" name="num2" />
+          <br />
+          <button type="submit">submit</button>
+        </form>
+        <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
+        num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+      </div>
+    </div>
   </body>
 </html>
