--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -25,8 +25,10 @@
           <br />
           <button type="submit">submit</button>
         </form>
-        <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
-        num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+        <div id="result">
+          <%if (result || (typeof result === 'number' && !isNaN(result))) { %>
+          <%= num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+        </div>
       </div>
     </div>
   </body>
