--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -18,8 +18,10 @@
         <br />
         <button type="submit">submit</button>
       </form>
-      <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
-      num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+      <div id="result">
+        <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
+        num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+      </div>
     </span>
   </body>
 </html>
