minor changes again

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,9 @@ a {
 a:hover {
   background-color: white;
   color: lightcoral;
+}
+
+.container > a:hover {
   border-bottom: 1px solid lightcoral;
 }
 
@@ -102,6 +105,7 @@ h1 {
   width: 100%;
   text-align: center;
   background-color: black;
+  color: white;
   height: 100px;
   display: flex;
   justify-content: center;
