--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -20,7 +20,8 @@
       </form>
       <div id="result">
         <%if (result || (typeof result === 'number' && !isNaN(result))) { %> <%=
-        num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } %>
+        num1 %> <%= symbol %> <%= num2 %> = <%= result %> <% } else{Your result
+        will appear here!}%>
       </div>
     </span>
   </body>
