--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,7 +70,7 @@ button {
   width: 100%;
   height: 100px;
   background-color: black;
-  color: rgb(0, 173, 0);
+  color: white;
   text-transform: uppercase;
   font-size: 20px;
   letter-spacing: 2px;
@@ -106,4 +106,15 @@ h1 {
   justify-content: center;
   width: 10%;
   color: rgb(0, 173, 0);
+}
+
+#result {
+  width: 100%;
+  text-align: center;
+  background-color: black;
+  color: white;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
