--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,7 @@ input {
   padding-left: 20px;
   font-size: 25px;
   flex-grow: 1;
+  font-family: "Orbitron", "Century Gothic", sans-serif;
 }
 
 button {
@@ -99,7 +100,7 @@ h1 {
 }
 
 #symbol {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   display: flex;
   align-items: center;
